# Kuka_Zivid_ros_melodic

./: .gitignore  README.md  requirements.txt  sample_capture_assistant.py  test.py
cam_models/: Zivid OA10.stl
extrinsics/: aruco_marker.py  difference.py  extrinsic_0.yaml  extrinsic_1.yaml  extrinsic_2.yaml  extrinsic_3.yaml  extrinsic_4.yaml  sample_capture_2d.py
extrinsics/non_rectified/: extrinsics_0.yaml  extrinsics_3.yaml  extrinsics_4_33samples.yaml
extrinsics/rectified/: extrinsics_0.yaml  extrinsics_1.yaml  extrinsics_2.yaml  extrinsics_3.yaml  extrinsics_4.yaml
intrinsics/: camera.xml  camera_.xml  cv2_calibrate.py  sample_capture_2d.py  sample_capture_assistant.py
point_clouds/: 02_ds_cropped.ply
scripts/: colored_pcr.py  cropping.py  global_pcr.py  global_registration.py  kuka_control_test.py  open3d_test.py  zivid_sample_test.py  zivid_test.py
scripts/json/: view_point.json
src/: README.md
src/camera_test/extrinsics/: best_guess.yaml  sample_capture_2d.py
src/camera_test/objects/: part_xyz_0_crop.ply  part_xyz_1_crop.ply  part_xyz_3_crop.ply
src/camera_test/point_clouds/: 01_ds_cropped.ply  03_ds_cropped.ply  04_ds_cropped.ply  05_ds_cropped.ply
src/camera_test/scripts/: crop_in_cam_frame.py  cropping.py  extrinsic_visualization.py  global_pcr.py  workspace_bounding_box_array_in_base.npy  zivid_sample_test.py
src/camera_test/test_scripts/: extrinsic_visualization.py  fusion.py  kuka_controller.py
src/easy_handeye_calibration/: CMakeLists.txt  package.xml
src/easy_handeye_calibration/launch/: camera.launch  controller.launch  my_calibrate.launch  sample_two_pcd.launch  tracking.launch  tracking_realsense.launch
src/easy_handeye_calibration/nodes/: aruco_marker.py  calibration_cmd_prompt.py  command_prompt.py  dummy_aruco_subscriber.py  extrinsic_fine_tuning_prompt.py  extrinsic_fine_tuning_prompt_eye_on_hand.py  extrinsic_fine_tuning_realsense.py  sample_capture_2d.py  sample_pcd.py  sample_pcd_realsense.py  sample_two_pcd.py  verify_eye_on_hand_result_aruco.py  verify_eye_on_hand_result_pcd.py  zivid_calibration.py  zivid_capture_controller.py
src/easy_handeye_calibration/result_realsense/: Extrinsics.yaml  transform_cam_to_base.npy  transform_cam_to_ee_fine_tuned.npy
src/easy_handeye_calibration/results/: Extrinsics_0.yaml  calibration_result_realsense  cropped_pcd_reference_in_world_frame.ply  transform_base_to_cam_fine_tuned.npy  transform_base_to_reference_grasp.npy  transform_cam_to_base_fine_tuned.npy
src/easy_handeye_calibration/results_20220307/: cropped_pcd_reference_in_world_frame.ply  transform_base_to_reference_grasp.npy  transform_cam_to_base_fine_tuned.npy
src/easy_handeye_calibration/results_20220526/: cropped_pcd_reference_in_world_frame.ply  transform_base_to_cam_fine_tuned.npy  transform_base_to_reference_grasp.npy  transform_cam_to_base_fine_tuned.npy
src/easy_handeye_calibration/results_20221031/: transform_cam_to_base_fine_tuned.npy
src/easy_handeye_calibration/results_20221115/: transform_base_to_cam_fine_tuned.npy  transform_cam_to_base_fine_tuned.npy
src/easy_handeye_calibration/results_eye_on_hand/: extrinsics.txt  saving_script.py  transform_cam_to_ee.npy  transform_ee_to_cam.npy
src/easy_handeye_calibration/scripts/: sample_capture_2d.py  tracking_simulator.py
src/easy_hendeye_demo/: package.xml
src/easy_hendeye_demo/launch/: calibrate.launch  check_calibration.launch
src/grasping_demo/: CMakeLists.txt  package.xml  setup.py
src/grasping_demo/launch/: camera.launch  grasping_controller.launch  grasping_demo.launch  grasping_pcd_processing.launch  kuka_follow_qrcode.launch  kuka_moveit_controller.launch  kuka_pcd_sampler.launch
src/grasping_demo/nodes/: capture_helper.py  command_prompt.py  constants.py  imitation_learning_exp.py  keyboard_event_node.py  kuka_controller.py  kuka_controller_imitationlearng.py  kuka_controller_moveit.py  kuka_follow_qrcode.py  kuka_pcd_sampler.py  kuka_state_listener.py  pcd_processing.py  pick_hand_out_object.py  send_pose_cmd.py  test.py
src/grasping_demo/src/: delta_p.npy  rot_diff.npy
src/grasping_demo/src/grasping_demo/: pcd_registration.py
src/grasping_demo/src/grasping_demo/transformation_matrices/: transform_base_to_cam_fine_tuned.npy  transform_base_to_part_reference_grasp.npy  transform_base_to_reference_grasp.npy  workspace_bounding_box_array_in_base.npy
src/grasping_demo/src/minglun_demo_trajectories/: delta_p_1.npy  delta_p_2.npy  delta_p_3.npy  delta_rot_1.npy  delta_rot_2.npy  delta_rot_3.npy
src/grasping_demo/src/pcd_processing/: pcd_registration.py
src/grasping_demo/src/pcd_processing/transformation_matrices/: transform_base_to_sprayer_reference_grasp.npy  transform_cam_to_base_fine_tuned.npy
src/grasping_demo/src/transformation_matrices/: transform_base_to_brash_reference_grasp.npy  transform_base_to_cam_fine_tuned.npy  transform_base_to_reference_grasp_part.npy  transform_cam_to_base_fine_tuned.npy  workspace_bounding_box_array_in_base.npy
src/grasping_demo/src/utils/: generate_hm.py  kuka_poses.py  pcd_registration.py  registration_configs.json  simulation.py
src/grasping_demo/src/utils/MPM_planning/: DPSI_found_params.npy  tr_poking-shifting_1_v_dt_0.01.npy  tr_poking-shifting_2_v_dt_0.01.npy
src/grasping_demo/srv/: MoveDistance.srv  TargetPose.srv
src/robotiq_3f_gripper_control/: CMakeLists.txt
src/test/: test.py
src/test/extrinsics/: best_guess.yaml
(+107 files in other folders)
