<?xml version="1.0"?>
<package format="2">
    <name>easy_handeye_calibration</name>
    <version>0.3.0</version>
    <description>
        Small demonstration of a hand-eye calibration with easy_handeye, no hardware required.
    </description>

    <maintainer email="yangx66@cardiff.ac.uk">xintong</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>easy_handeye</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>iiwa_moveit</exec_depend>
    <exec_depend>zivid_camera</exec_depend>

    <export>
    </export>
</package>
